--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>TZ MP3 MEDIA HOST</title>   </head>
    <body>
-                                                                      <h1> WELCOME</h1>
+<div>                                                                     <h1> WELCOME</h1>
 Karibu TZ MP3 Media, Tunakuwezesha kudownload Nyimbo Mpya za Bongoflava Audio Mp3 pamoja na Video mpya za bongo flava 2018 za wasanii maarufu kama vile Diamond Platnumz,Rayvanny,Lady Jaydee,Alikiba,Nandy na wengine.
 
 Download Singeli Nyimbo mpya 2018 za Audio na Video mpya za Singeli kutoka kwa wasanii wa Nyimbo za Singeli kama vile Man Fongo, Dulla Makabila , Sholo Mwamba, Msaga Sumu na wengine kibao wa Nyimbo za Singeli - Tanzania.
@@ -15,7 +15,7 @@ Download video za Gospel pamoja na gospel Audio kutoka Tanzania za waimbaji wa N
 
 Download Qaswida mpya 2018 za waimbaji wa Nyimbo za Qaswida Mp3 za Kiswahili, Qaswida za harusi za Arafa,Qaswida za Ramadhan za Audio na Video na Qaswida za Tanzania zote. 
 
-Pia utaweza kudownload nyimbo mpya za Taarab , Nyimbo za mwambao , Nyimbo za Taarab video mpya na Taarab Audio Mp3 bila kusahau Ngoma za Nigeria na Kenya.
+Pia utaweza kudownload nyimbo mpya za Taarab , Nyimbo za mwambao , Nyimbo za Taarab video mpya na Taarab Audio Mp3 bila kusahau Ngoma za Nigeria na Kenya.</div>
                                                                       
                                                                       </body></html>
                              
