--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>TZ MP3 MEDIA HOST</title>   </head>
    <body>
 <div>                                                                     <h1> WELCOME</h1>
-Karibu TZ MP3 Media, Tunakuwezesha kudownload Nyimbo Mpya za Bongoflava Audio Mp3 pamoja na Video mpya za bongo flava 2018 za wasanii maarufu kama vile Diamond Platnumz,Rayvanny,Lady Jaydee,Alikiba,Nandy na wengine.
+Karibu <a href="https://www.tzmp3.co.tz/">TZ MP3 Media,</a> Tunakuwezesha kudownload Nyimbo Mpya za Bongoflava Audio Mp3 pamoja na Video mpya za bongo flava 2018 za wasanii maarufu kama vile Diamond Platnumz,Rayvanny,Lady Jaydee,Alikiba,Nandy na wengine.
 
 Download Singeli Nyimbo mpya 2018 za Audio na Video mpya za Singeli kutoka kwa wasanii wa Nyimbo za Singeli kama vile Man Fongo, Dulla Makabila , Sholo Mwamba, Msaga Sumu na wengine kibao wa Nyimbo za Singeli - Tanzania.
 
