--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset=utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>TZ MP3 MEDIA HOST</title>   
-                                              <style>.mygit a {color:#808000;text-decoration:none}.mygit-logo {width:100%;background:#15317E;padding:10px;text-align:center}
+                                              <style>.mygit a {color:#808000;text-decoration:none}
+                                                         .mygit-logo {width:100%;background:#15317E;padding:10px;text-align:center}
 .mygit-logo span{color:#ffffff;font-size: calc(35px + (90 - 35) * ((100vw - 300px) / (760 - 300)));
   line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(760 - 300)));font-weight:700}
 
@@ -20,17 +21,17 @@ TZ MP3 MEDIA</div>
 Welcome to Our Articles</h1>
 Karibu <a href="https://www.tzmp3.co.tz/">TZ MP3 Media,</a> Pia Tunakuwezesha kudownload Nyimbo Mpya za<a href="https://www.tzmp3.co.tz/search/label/Bongoflava%20Audio"> Bongoflava Audio </a> Mp3 pamoja na<a href="https://www.tzmp3.co.tz/search/label/Bongoflava%20Video"> Video mpya za bongo </a> flava 2018 za wasanii maarufu kama vile<a href="https://www.tzmp3.co.tz/search/label/Diamond%20Platnumz"> Diamond Platnumz, </a>Rayvanny,Lady Jaydee,Alikiba,<a href="https://www.tzmp3.co.tz/search?q=Nandy">Nandy</a> na wengine.
 
-
+<br/><br/>
 
 Download<a href="https://www.tzmp3.co.tz/search/label/Singeli"> Singeli Nyimbo mpya 2019 </a> za Audio na Video mpya za Singeli kutoka kwa wasanii wa Nyimbo za Singeli kama vile Man Fongo, Dulla Makabila , Sholo Mwamba, Msaga Sumu na wengine kibao wa Nyimbo za Singeli - Tanzania.
 
-
+<br/><br/>
 Download video za<a href="https://www.tzmp3.co.tz/search/label/Tanzania%20gospel%20music%20downloads"> Gospel</a> pamoja na gospel Audio kutoka Tanzania za waimbaji wa<a href="https://www.tzmp3.co.tz/search/label/Nyimbo%20za%20dini"> Nyimbo za Injili</a> za Kiswahili, Nyimbo za kuabudu na Nyimbo zote za dini za kikristo za waimbaji kama Rose Muhando , Bahati Bukuku , Bonny Mwaitege nk. 
 
-
+<br/><br/>
 Download<a href="https://www.tzmp3.co.tz/search/label/Qaswida"> Qaswida mpya</a> 2019 za waimbaji wa Nyimbo za Qaswida Mp3 za Kiswahili, Qaswida za harusi za Arafa,Qaswida za Ramadhan za Audio na Video na Qaswida za<a href="https://www.tzmp3.co.tz/search/label/Tanzania%20music"> Tanzania zote </a>. 
 
-
+<br/><br/>
 Pia utaweza kudownload nyimbo mpya za Taarab ,<a href="https://www.tzmp3.co.tz/search/label/Taarab"> Nyimbo za mwambao</a> , Nyimbo za Taarab video mpya na Taarab Audio Mp3 bila kusahau Ngoma za<a href="https://www.tzmp3.co.tz/search/label/Nigerian%20Music"> Nigeria Music</a> na Kenya.</div>
                                                           </body></html>
                              
