--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>TZ MP3 MEDIA HOST</title>   
                                               <style>.mygit a {color:#808000;text-decoration:none}
                                                          .mygit-logo {width:100%;background:#15317E;padding:10px;text-align:center}
-.mygit-logo span{color:#ffffff;font-size: calc(35px + (90 - 35) * ((100vw - 300px) / (760 - 300)));
-  line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(760 - 300)));font-weight:700}
+.mygit-logo span{color:#ffffff;font-size:35px;font-weight:700}
 
 .mygit h1 {text-align:center}</style>                            
   </head>
