--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>TZ MP3 MEDIA HOST</title>   
                                               <style>.mygit a {color:#808000;text-decoration:none}
                                                          .mygit-logo {width:100%;background:#15317E;padding:10px;text-align:center}
-.mygit-logo span {color:#ffffff;font-size:35px;font-weight:700}
+.mygit-logo span {color:#ffffff;font-size:font-size: calc(35px + (90 - 35) * ((100vw - 300px) / (760 - 300)));
+  line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(760 - 300)));font-weight:700}
+
+                                                                  
 
 .mygit h1 {text-align:center}</style>                            
   </head>
@@ -15,7 +18,7 @@
                                                                
         <div class="mygit">
 <div class="mygit-logo">
-TZ MP3 MEDIA</div>
+<span>TZ MP3 MEDIA</span></div>
 <h1>
 Welcome to Our Articles</h1>
 Karibu <a href="https://www.tzmp3.co.tz/">TZ MP3 Media,</a> Pia Tunakuwezesha kudownload Nyimbo Mpya za<a href="https://www.tzmp3.co.tz/search/label/Bongoflava%20Audio"> Bongoflava Audio </a> Mp3 pamoja na<a href="https://www.tzmp3.co.tz/search/label/Bongoflava%20Video"> Video mpya za bongo </a> flava 2018 za wasanii maarufu kama vile<a href="https://www.tzmp3.co.tz/search/label/Diamond%20Platnumz"> Diamond Platnumz, </a>Rayvanny,Lady Jaydee,Alikiba,<a href="https://www.tzmp3.co.tz/search?q=Nandy">Nandy</a> na wengine.
