--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>TZ MP3 MEDIA HOST</title>   
                                               <style>
-                                                    html,body {width:100%;margin:0;overflow:hidden}  .content{padding:3%}                .content a {color:#808000;text-decoration:none}
+                                                    html,body {width:100%;margin:0;overflow-x:hidden}  .content{padding:3%}                .content a {color:#808000;text-decoration:none}
                                                          .mygit-logo {width:100%;background:#15317E;padding:10px;text-align:center}
 .mygit-logo span {color:#ffffff;font-size: calc(35px + (90 - 35) * ((100vw - 300px) / (760 - 300)));
   line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(760 - 300)));font-weight:700}
