--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@ Download video za//www.tzmp3.co.tz/search/label/Tanzania%20gospel%20music%20down
 Download<a href="https://www.tzmp3.co.tz/search/label/Qaswida"> Qaswida mpya</a> 2019 za waimbaji wa Nyimbo za Qaswida Mp3 za Kiswahili, Qaswida za harusi za Arafa,Qaswida za Ramadhan za Audio na Video na Qaswida za<a href="https://www.tzmp3.co.tz/search/label/Tanzania%20music"> Tanzania zote </a>. 
 
 <br/><br/>
-Pia utaweza kudownload <a href="https://www.tzmp3.co.tz/search/label/Nyimbo mpya">nyimbo mpyampya</a> za Taarab ,<a href="https://www.tzmp3.co.tz/search/label/Taarab"> Nyimbo za mwambao</a> , Nyimbo za Taarab video mpya na Taarab Audio Mp3 bila kusahau Ngoma za<a href="https://www.tzmp3.co.tz/search/label/Nigerian%20Music"> Nigeria Music</a> na Kenya.</div>
+Pia utaweza kudownload <a href="https://www.tzmp3.co.tz/search/label/Nyimbo mpya">nyimbo mpya</a> za Taarab ,<a href="https://www.tzmp3.co.tz/search/label/Taarab"> Nyimbo za mwambao</a> , Nyimbo za Taarab video mpya na Taarab Audio Mp3 bila kusahau Ngoma za<a href="https://www.tzmp3.co.tz/search/label/Nigerian%20Music"> Nigeria Music</a> na Kenya.</div>
                                                           </div></body></html>
                              
