--- a/indexi.html
+++ b/indexi.html
@@ -21,7 +21,7 @@
 <div class="mygit-logo">
 <span>TZ MP3 MEDIA</span></div>
 <div class="content">
-<div clsss="ad">
+<div class="ad">
                <script src="featured.js"></script></div>
 
 Karibu <a href="https://www.tzmp3.co.tz/">TZ MP3 Media,</a> Pia Tunakuwezesha kudownload Nyimbo Mpya za<a href="https://www.tzmp3.co.tz/search/label/Bongoflava%20Audio"> Bongoflava Audio </a> Mp3 pamoja na<a href="https://www.tzmp3.co.tz/search/label/Bongoflava%20Video"> Video mpya za bongo </a> flava 2018 za wasanii maarufu kama vile<a href="https://www.tzmp3.co.tz/search/label/Diamond%20Platnumz"> Diamond Platnumz, </a>Rayvanny,Lady Jaydee,Alikiba,<a href="https://www.tzmp3.co.tz/search?q=Nandy">Nandy</a> na wengine.
