--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@ Karibu <a href="https://www.tzmp3.co.tz/">TZ MP3 Media,</a> Pia Tunakuwezesha ku
 Download<a href="https://www.tzmp3.co.tz/search/label/Singeli"> Singeli Nyimbo mpya 2019 </a> za Audio na Video mpya za Singeli kutoka kwa wasanii wa Nyimbo za Singeli kama vile Man Fongo, Dulla Makabila , Sholo Mwamba, Msaga Sumu na wengine kibao wa Nyimbo za Singeli - Tanzania.
 
 <br/><br/>
-Download video za <a href="https://www.tzmp3.co.tz/search/label/Tanzania%20gospel%20music%20downloads"> Gospel</a> pamoja na gospel Audio kutoka Tanzania za waimbaji wa <a href="https://www.tzmp3.co.tz/search/label/Nyimbo%20za%20dini"> Nyimbo za Injili</a> za Kiswahili, Nyimbo za kuabudu na Nyimbo zote za dini za kikristo za waimbaji kama Rose Muhando , Bahati Bukuku , Bonny Mwaitege nk.
+Download video za <a href="https://chezaclone.blogspot.com/search/label/Gospel"> Gospel</a> pamoja na gospel Audio kutoka Tanzania za waimbaji wa <a href="https://www.tzmp3.co.tz/search/label/Nyimbo%20za%20dini"> Nyimbo za Injili</a> za Kiswahili, Nyimbo za kuabudu na Nyimbo zote za dini za kikristo za waimbaji kama Rose Muhando , Bahati Bukuku , Bonny Mwaitege nk.
 
 <br/><br/>
-Download<a href="https://www.tzmp3.co.tz/search/label/Qaswida"> Qaswida mpya</a> 2019 za waimbaji wa Nyimbo za Qaswida Mp3 za Kiswahili, Qaswida za harusi za Arafa,Qaswida za Ramadhan za Audio na Video na Qaswida za<a href="https://www.tzmp3.co.tz/search/label/Tanzania%20music"> Tanzania zote </a>.
+Download<a href="https://chezaclone.blogspot.com/search/label/Qaswida"> Qaswida mpya</a> 2019 za waimbaji wa Nyimbo za Qaswida Mp3 za Kiswahili, Qaswida za harusi za Arafa,Qaswida za Ramadhan za Audio na Video na Qaswida za<a href="https://www.tzmp3.co.tz/search/label/Tanzania%20music"> Tanzania zote </a>.
 
 <br/><br/>
-Pia utaweza kudownload <a href="https://www.tzmp3.co.tz/search/label/Nyimbo mpya">nyimbo mpya</a> za Taarab ,<a href="https://www.tzmp3.co.tz/search/label/Taarab"> Nyimbo za mwambao</a> , Nyimbo za Taarab video mpya na Taarab Audio Mp3 bila kusahau Ngoma za<a href="https://www.tzmp3.co.tz/search/label/Nigerian%20Music"> Nigeria Music</a> na Kenya.</div>
+Pia utaweza kudownload nyimbo mpya<a href="https://chezaclone.blogspot.com/search/label/Taarab"> za Taarab </a>,<a href="https://www.tzmp3.co.tz/search/label/Taarab"> Nyimbo za mwambao</a> , Nyimbo za Taarab video mpya na Taarab Audio Mp3 bila kusahau Ngoma za<a href="https://www.tzmp3.co.tz/search/label/Nigerian%20Music"> Nigeria Music</a> na Kenya.</div>
                                                           </div></body></html>
